added extra music directors

--- a/vijay.html
+++ b/vijay.html
@@ -19,6 +19,8 @@
                     <li>SaNa</li>
                     <li>AR Rahman</li>
                     <li>Thaman</li>
+                    <li>samcs</li>
+                    <li>Imman</li>
                 </ul>
                 <h2>Favorite Films</h2>
                 <ol>
