--- a/vijay.html
+++ b/vijay.html
@@ -29,6 +29,8 @@
                     <li>Pizza</li>
                     <li>Sarkar</li>
                     <li>Varisu</li>
+                    <li>Vikram Vedha</li>
+                    <li>Jilla</li>
                 </ol>
                 <a href="https://www.coursera.org/user/f0a8bb3381c7b6be3657dcf9bbbc3cdb" class="btn btn-primary">My Meta Profile</a>
             </div>
